Discard DB storeage cuz its too slow, implementing the file based storage

--- a/settings.properties
+++ b/settings.properties
@@ -1,6 +1,9 @@
-//Settings about databases
+#Settings about databases
+
+#The method of storage
+edu.cmu.cs.lti.gigaScript.tupleStorage=file
 edu.cmu.cs.lti.gigaScript.db.path=gigaScript.db
 edu.cmu.cs.lti.gigaScript.tupleTableName=Tuples
 edu.cmu.cs.lti.gigaScript.bigramTableName=BigramCounts
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/hector/Downloads/agiga_sample
-edu.cmu.cs.lti.gigaScript.clausie.errorOut=error.txt
+edu.cmu.cs.lti.gigaScript.clausie.errorOut=error.log
