Finish File based storage

--- a/settings.properties
+++ b/settings.properties
@@ -1,9 +1,17 @@
-#Settings about databases
 
+
+###############Storage configurations###############
 #The method of storage
 edu.cmu.cs.lti.gigaScript.tupleStorage=file
+#DB related
 edu.cmu.cs.lti.gigaScript.db.path=gigaScript.db
 edu.cmu.cs.lti.gigaScript.tupleTableName=Tuples
 edu.cmu.cs.lti.gigaScript.bigramTableName=BigramCounts
-edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/hector/Downloads/agiga_sample
+#File related
+edu.cmu.cs.lti.gigaScript.file.prefix=tuple_files/gigaScript_
+
+###############Other IO###############
+#input
+edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
+#error
 edu.cmu.cs.lti.gigaScript.clausie.errorOut=error.log
