Save object type at the end

--- a/settings.properties
+++ b/settings.properties
@@ -1,17 +1,17 @@
-
-
 ###############Storage configurations###############
 #The method of storage
 edu.cmu.cs.lti.gigaScript.tupleStorage=file
+edu.cmu.cs.lti.gigaScript.tuple.storage.name=Tuples
+edu.cmu.cs.lti.gigaScript.bigram.storage.name=BigramCounts
 #DB related
-edu.cmu.cs.lti.gigaScript.db.path=gigaScript.db
-edu.cmu.cs.lti.gigaScript.tupleTableName=Tuples
-edu.cmu.cs.lti.gigaScript.bigramTableName=BigramCounts
+edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
-edu.cmu.cs.lti.gigaScript.file.prefix=tuple_files/gigaScript_
-
+edu.cmu.cs.lti.gigaScript.file.prefix=storage/files/gigaScript_batch0_
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
 #error
-edu.cmu.cs.lti.gigaScript.clausie.errorOut=error.log
+edu.cmu.cs.lti.gigaScript.errorOut=error.log
+###############Clausie###############
+#Clausie config
+edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
