Using Trove to refactor cache

--- a/settings.properties
+++ b/settings.properties
@@ -9,9 +9,11 @@ edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 edu.cmu.cs.lti.gigaScript.file.prefix=storage/files/gigaScript_batch0_
 ###############Other IO###############
 #input
-edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
+edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/hector/Downloads/agiga_sample
 #error
-edu.cmu.cs.lti.gigaScript.errorOut=error.log
+edu.cmu.cs.lti.gigaScript.log=gigascript.log
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
+###############Console mode: single or batch mode###############
+edu.cmu.cs.lti.gigaScript.console.mode=single
