Remove the phrase entity type method

--- a/settings.properties
+++ b/settings.properties
@@ -6,7 +6,8 @@ edu.cmu.cs.lti.gigaScript.bigram.storage.name=BigramCounts
 #DB related
 edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
-edu.cmu.cs.lti.gigaScript.file.prefix=storage/files/gigaScript_batch0_
+edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
+edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/hector/Downloads/agiga_sample
