--- a/settings.properties
+++ b/settings.properties
@@ -8,6 +8,7 @@ edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
 edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
+edu.cmu.cs.lti.gigaScript.flush.size=50
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/hector/Downloads/agiga_sample
@@ -17,4 +18,4 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 ###############Console mode: single or batch mode###############
-edu.cmu.cs.lti.gigaScript.console.mode=single
+edu.cmu.cs.lti.gigaScript.console.mode=batch
