--- a/settings.properties
+++ b/settings.properties
@@ -19,3 +19,6 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 ###############Console mode: single or batch mode###############
 edu.cmu.cs.lti.gigaScript.console.mode=batch
+############### Solr ###############
+#edu.cmu.cs.lti.gigaScript.solor.host=http://128.2.209.23:8983/solr
+edu.cmu.cs.lti.gigaScript.solor.host=http://localhost:8983/solr
