Fix indexer and searcher

--- a/settings.properties
+++ b/settings.properties
@@ -17,8 +17,8 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
-###############Console mode: single or batch mode###############
-edu.cmu.cs.lti.gigaScript.console.mode=batch
+###############Console mode: to file or at console###############
+edu.cmu.cs.lti.gigaScript.console.mode=console
 ############### Solr ###############
 #edu.cmu.cs.lti.gigaScript.solor.host=http://128.2.209.23:8983/solr
 edu.cmu.cs.lti.gigaScript.solor.host=http://localhost:8983/solr
