Add a setting for index clearing

--- a/settings.properties
+++ b/settings.properties
@@ -10,7 +10,7 @@ edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.flush.size=20
 #Index related
-edu.cmu.cs.lti.gigaScript.index.interval=1000
+edu.cmu.cs.lti.gigaScript.index.reset=true
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample_1
