--- a/settings.properties
+++ b/settings.properties
@@ -19,7 +19,7 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
-###############Console mode: to file or at console###############
+###############Console model: to file or at console###############
 edu.cmu.cs.lti.gigaScript.console.mode=console
 ############### Solr ###############
 #edu.cmu.cs.lti.gigaScript.solor.host=http://128.2.209.23:8983/solr
