--- a/settings.properties
+++ b/settings.properties
@@ -10,10 +10,9 @@ edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.flush.size=20
 #Index related
-edu.cmu.cs.lti.gigaScript.index.reset=true
 ###############Other IO###############
 #input
-edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample_1
+edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
 #error
 edu.cmu.cs.lti.gigaScript.log=gigascript.log
 ###############Clausie###############
@@ -21,6 +20,6 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 ###############Console model: to file or at console###############
 edu.cmu.cs.lti.gigaScript.console.mode=console
-############### Solr ###############
-#edu.cmu.cs.lti.gigaScript.solor.host=http://128.2.209.23:8983/solr
-edu.cmu.cs.lti.gigaScript.solor.host=http://localhost:8983/solr
+###############Indexing###############
+edu.cmu.cs.lti.gigaScript.index.reset=true
+edu.cmu.cs.lti.gigaScript.solr.host=http://localhost:8983/solr
