add some scripts

--- a/settings.properties
+++ b/settings.properties
@@ -9,12 +9,13 @@ edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
 edu.cmu.cs.lti.gigaScript.flush.size=20
-#Index related
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
 #error
 edu.cmu.cs.lti.gigaScript.log=gigascript.log
+#plain text out
+edu.cmu.cs.lti.gigaScript.sentences.out.path=storage/plain
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
