Add filter option

--- a/settings.properties
+++ b/settings.properties
@@ -15,7 +15,12 @@ edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
 #error
 edu.cmu.cs.lti.gigaScript.log=gigascript.log
 #plain text out
-edu.cmu.cs.lti.gigaScript.sentences.out.path=storage/plain
+edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
+#Format
+edu.cmu.cs.lti.gigaScript.writeBigramWords=true
+#File filter
+edu.cmu.cs.lti.gigaScript.filter=true
+edu.cmu.cs.lti.gigaScript.filterFile=duplicate.count.head
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
