Add a simple searcher

--- a/settings.properties
+++ b/settings.properties
@@ -28,4 +28,4 @@ edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 edu.cmu.cs.lti.gigaScript.console.mode=console
 ###############Indexing###############
 edu.cmu.cs.lti.gigaScript.index.reset=true
-edu.cmu.cs.lti.gigaScript.solr.host=http://localhost:8983/solr
+edu.cmu.cs.lti.gigaScript.solr.host=http://128.2.209.23:8983/solr
