--- a/settings.properties
+++ b/settings.properties
@@ -29,3 +29,12 @@ edu.cmu.cs.lti.gigaScript.console.mode=console
 ###############Indexing###############
 edu.cmu.cs.lti.gigaScript.index.reset=true
 edu.cmu.cs.lti.gigaScript.solr.host=http://128.2.209.23:8983/solr
+###############Graph###############
+edu.cmu.cs.lti.gigaScript.graph.base.dir=storage/graph
+edu.cmu.cs.lti.gigaScript.graph.name=sentBasedGraph
+edu.cmu.cs.lti.gigaScript.graph.edges=sentEdge
+edu.cmu.cs.lti.gigaScript.graph.edge.sorted=true
+edu.cmu.cs.lti.gigaScript.graph.node.largest=81827506
+edu.cmu.cs.lti.gigaScript.graph.node.base=78195158
+edu.cmu.cs.lti.gigaScript.graph.node.targets.path=edgeStats
+edu.cmu.cs.lti.gigaScript.graph.arc.number=228411189
