Add another filter to full system runner

--- a/settings.properties
+++ b/settings.properties
@@ -6,8 +6,8 @@ edu.cmu.cs.lti.gigaScript.bigram.storage.name=BigramCounts
 #DB related
 edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
-edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_batch0_
-edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_batch0_
+edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_bombing_
+edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_bombing_
 edu.cmu.cs.lti.gigaScript.flush.size=20
 ###############Other IO###############
 #input
@@ -20,7 +20,7 @@ edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 edu.cmu.cs.lti.gigaScript.additionalInfo=true
 #File filter
 edu.cmu.cs.lti.gigaScript.filter=true
-edu.cmu.cs.lti.gigaScript.filterFile=duplicate.count.head
+edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
