add document id in the right way

--- a/settings.properties
+++ b/settings.properties
@@ -17,7 +17,7 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 #plain text out
 edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 #Format
-edu.cmu.cs.lti.gigaScript.additionalInfo=true
+edu.cmu.cs.lti.gigaScript.additionalInfo=flase
 #File filter
 edu.cmu.cs.lti.gigaScript.filter=true
 edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
