Finish tuple finder

--- a/settings.properties
+++ b/settings.properties
@@ -38,4 +38,5 @@ edu.cmu.cs.lti.gigaScript.graph.node.largest=81827506
 edu.cmu.cs.lti.gigaScript.graph.node.base=78195158
 edu.cmu.cs.lti.gigaScript.graph.node.targets.path=edgeStats
 edu.cmu.cs.lti.gigaScript.graph.arc.number=228411189
-edu.cmu.cs.lti.gigaScript.graph.node.mapping.path=/home/hector/storage/final/edge/expanded_tuples_naive.sorted.reduced.filtered.only
+edu.cmu.cs.lti.gigaScript.graph.node.mapping.path=/home/hector/storage/final/edge/expanded_tuples_naive.sorted.reduced.filtered
+edu.cmu.cs.lti.gigaScript.graph.script.outpath=script.out
