Various bug fixes

--- a/settings.properties
+++ b/settings.properties
@@ -18,6 +18,7 @@ edu.cmu.cs.lti.gigaScript.log=gigascript.log
 edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 #Format
 edu.cmu.cs.lti.gigaScript.additionalInfo=flase
+edu.cmu.cs.lti.gigaScript.lowercase=true
 #File filter
 edu.cmu.cs.lti.gigaScript.filter=true
 edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
@@ -30,13 +31,14 @@ edu.cmu.cs.lti.gigaScript.console.mode=console
 edu.cmu.cs.lti.gigaScript.index.reset=true
 edu.cmu.cs.lti.gigaScript.solr.host=http://128.2.209.23:8983/solr
 ###############Graph###############
-edu.cmu.cs.lti.gigaScript.graph.base.dir=storage/graph
+edu.cmu.cs.lti.gigaScript.graph.base.dir=storage/graph/dev/sent
 edu.cmu.cs.lti.gigaScript.graph.name=sentBasedGraph
 edu.cmu.cs.lti.gigaScript.graph.edges=sentEdge
 edu.cmu.cs.lti.gigaScript.graph.edge.sorted=true
-edu.cmu.cs.lti.gigaScript.graph.node.largest=81827506
-edu.cmu.cs.lti.gigaScript.graph.node.base=78195158
-edu.cmu.cs.lti.gigaScript.graph.node.targets.path=edgeStats
-edu.cmu.cs.lti.gigaScript.graph.arc.number=228411189
-edu.cmu.cs.lti.gigaScript.graph.node.mapping.path=/home/hector/storage/final/edge/expanded_tuples_naive.sorted.reduced.filtered
+edu.cmu.cs.lti.gigaScript.graph.node.largest=1195837
+edu.cmu.cs.lti.gigaScript.graph.node.base=0
+edu.cmu.cs.lti.gigaScript.graph.node.targets.path=targetNodes.bombing
+edu.cmu.cs.lti.gigaScript.graph.arc.number=11964387
+edu.cmu.cs.lti.gigaScript.graph.node.map.expand.path=storage/develop/edge/expanded_tuples.sorted.reduced.filtered
+edu.cmu.cs.lti.gigaScript.graph.node.map.origin.path=storage/develop/final_tuples
 edu.cmu.cs.lti.gigaScript.graph.script.outpath=script.out
