Decide to filter out IS and HAS

--- a/clausie.properties
+++ b/clausie.properties
@@ -8,10 +8,10 @@ conservativeSVOA = false
 processCcAllVerbs = true
 processCcNonVerbs = true
 processAppositions = true
-appositionVerb = is
-processPossessives = true
+appositionVerb = _is
+processPossessives = false
 processPartmods = true
-possessiveVerb = has
+possessiveVerb = _has
 lemmatize = false
 nary = false
 minOptionalArgs = 0
