--- a/settings.properties
+++ b/settings.properties
@@ -25,6 +25,7 @@ edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 ###############Clausie###############
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
+edu.cmu.cs.lti.gigaScript.clausie.discardApposition=true
 ###############Console model: to file or at console###############
 edu.cmu.cs.lti.gigaScript.console.mode=console
 ###############Indexing###############
