Write out clean and better formatted tuples, also add document id

--- a/settings.properties
+++ b/settings.properties
@@ -6,8 +6,8 @@ edu.cmu.cs.lti.gigaScript.bigram.storage.name=BigramCounts
 #DB related
 edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
-edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/txt/tuple/gigaScript_bombing_
-edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/txt/bigram/gigaScript_bombing_
+edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/full/tuple/gigaScript_bombing_
+edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/full/bigram/gigaScript_bombing_
 edu.cmu.cs.lti.gigaScript.flush.size=20
 ###############Other IO###############
 #input
@@ -20,7 +20,7 @@ edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 edu.cmu.cs.lti.gigaScript.additionalInfo=flase
 edu.cmu.cs.lti.gigaScript.lowercase=true
 #File filter
-edu.cmu.cs.lti.gigaScript.filter=true
+edu.cmu.cs.lti.gigaScript.filterMode=blacklist
 edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 ###############Clausie###############
 #Clausie config
@@ -28,6 +28,8 @@ edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 edu.cmu.cs.lti.gigaScript.clausie.discardApposition=true
 ###############Console model: to file or at console###############
 edu.cmu.cs.lti.gigaScript.console.mode=console
+##############Agiga###################
+edu.cmu.cs.lti.gigaScript.agiga.trimHeader=NYT_ENG_
 ###############Indexing###############
 edu.cmu.cs.lti.gigaScript.index.reset=true
 edu.cmu.cs.lti.gigaScript.solr.host=http://128.2.209.23:8983/solr
