Various bug fixes

--- a/settings.properties
+++ b/settings.properties
@@ -14,6 +14,8 @@ edu.cmu.cs.lti.gigaScript.flush.size=20
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
 #error
 edu.cmu.cs.lti.gigaScript.log=gigascript.log
+#file id base
+edu.cmu.cs.lti.gigaScript.baseFileId=0
 #plain text out
 edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 #Format
