A pos based tuple filter

--- a/settings.properties
+++ b/settings.properties
@@ -6,8 +6,9 @@ edu.cmu.cs.lti.gigaScript.bigram.storage.name=BigramCounts
 #DB related
 edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 #File related
-edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/full/tuple/gigaScript_bombing_
-edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/full/bigram/gigaScript_bombing_
+edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/full/tuple/gs_test_
+edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/full/bigram/gs_test_
+edu.cmu.cs.lti.gigaScript.file.app.prefix=storage/full/app/gs_test_
 edu.cmu.cs.lti.gigaScript.flush.size=20
 ###############Other IO###############
 #input
@@ -22,7 +23,7 @@ edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 edu.cmu.cs.lti.gigaScript.additionalInfo=flase
 edu.cmu.cs.lti.gigaScript.lowercase=true
 #File filter
-edu.cmu.cs.lti.gigaScript.filterMode=blacklist
+edu.cmu.cs.lti.gigaScript.filterMode=whitelist
 edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 ###############Clausie###############
 #Clausie config
