Relax restriction on second actor

--- a/settings.properties
+++ b/settings.properties
@@ -23,7 +23,7 @@ edu.cmu.cs.lti.gigaScript.plain.out.path=storage/plain
 edu.cmu.cs.lti.gigaScript.additionalInfo=flase
 edu.cmu.cs.lti.gigaScript.lowercase=true
 #File filter
-edu.cmu.cs.lti.gigaScript.filterMode=whitelist
+edu.cmu.cs.lti.gigaScript.filterMode=none
 edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 ###############Clausie###############
 #Clausie config
