Implement a ArcLabelledGraph based on files to handle huge graphs

--- a/settings.properties
+++ b/settings.properties
@@ -37,14 +37,13 @@ edu.cmu.cs.lti.gigaScript.agiga.trimHeader=NYT_ENG_
 edu.cmu.cs.lti.gigaScript.index.reset=true
 edu.cmu.cs.lti.gigaScript.solr.host=http://128.2.209.23:8983/solr
 ###############Graph###############
-edu.cmu.cs.lti.gigaScript.graph.base.dir=storage/graph/dev/sent
-edu.cmu.cs.lti.gigaScript.graph.name=sentBasedGraph
 edu.cmu.cs.lti.gigaScript.graph.edges=sentEdge
 edu.cmu.cs.lti.gigaScript.graph.edge.sorted=true
-edu.cmu.cs.lti.gigaScript.graph.node.largest=1195837
+edu.cmu.cs.lti.gigaScript.graph.node.largest=2705524
 edu.cmu.cs.lti.gigaScript.graph.node.base=0
 edu.cmu.cs.lti.gigaScript.graph.node.targets.path=targetNodes.bombing
 edu.cmu.cs.lti.gigaScript.graph.arc.number=11964387
 edu.cmu.cs.lti.gigaScript.graph.node.map.expand.path=storage/develop/edge/expanded_tuples.sorted.reduced.filtered
 edu.cmu.cs.lti.gigaScript.graph.node.map.origin.path=storage/develop/final_tuples
 edu.cmu.cs.lti.gigaScript.graph.script.outpath=script.out
+edu.cmu.cs.lti.gigaScript.graph.splited=storage/nyt/bigrams/edge_splited
