Combine entity in one document

--- a/settings.properties
+++ b/settings.properties
@@ -9,7 +9,7 @@ edu.cmu.cs.lti.gigaScript.db.path=storage/db/gigaScript.db
 edu.cmu.cs.lti.gigaScript.file.tuple.prefix=storage/full/tuple/gs_test_
 edu.cmu.cs.lti.gigaScript.file.bigram.prefix=storage/full/bigram/gs_test_
 edu.cmu.cs.lti.gigaScript.file.app.prefix=storage/full/app/gs_test_
-edu.cmu.cs.lti.gigaScript.flush.size=20
+edu.cmu.cs.lti.gigaScript.flush.size=3
 ###############Other IO###############
 #input
 edu.cmu.cs.lti.gigaScript.agiga.dir=/Users/zhengzhongliu/Downloads/agiga_sample
@@ -29,8 +29,8 @@ edu.cmu.cs.lti.gigaScript.filterFile=doclist.bombings
 #Clausie config
 edu.cmu.cs.lti.gigaScript.clausie.properties=clausie.properties
 edu.cmu.cs.lti.gigaScript.clausie.discardApposition=true
-###############Console model: to file or at console###############
-edu.cmu.cs.lti.gigaScript.console.mode=console
+###############Console model: to file or at console, other to stay quite###############
+edu.cmu.cs.lti.gigaScript.console.mode=other
 ##############Agiga###################
 edu.cmu.cs.lti.gigaScript.agiga.trimHeader=NYT_ENG_
 ###############Indexing###############
